tests/typechecking/valid/simple_letrec_app.ml
let rec unite x = x in let y=6 in unite y