tests/typechecking/invalid/mul_for_bool.ml
let x=true in x*.8.6